fix overflow + scroll twitch sticky menu

--- a/source/css/_componants.scss
+++ b/source/css/_componants.scss
@@ -12,6 +12,7 @@ i.icon {
 #main-nav {
   position: relative;
   display: flex;
+  height: 80px;
   align-items: center;
   z-index: 100;
   
@@ -70,7 +71,8 @@ a.menu-logo svg {
 // States
 #main-nav {
   background-color: transparent ;
-  margin-top: -54px;
+  // margin-top: -54px;
+  transform: translateY(-60px);
   
   .wrapper .menu-logo,
   .lj-button {
@@ -83,6 +85,7 @@ a.menu-logo svg {
   #main-nav.is-nav-visible  {
     background-color: var(--paper);
     margin-top: auto;
+    transform: translateY(0);
 
 
     .wrapper .menu-logo,
